# limes-rs

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  NOTICE  README.md  justfile  request.yaml
.github/workflows/: audit.yaml  ci.yaml  dependabot.yml  release-plz.yml
crates/limes/: CHANGELOG.md  Cargo.toml  README.md  release-plz.toml
crates/limes/src/: authenticator.rs  axum.rs  chain.rs  error.rs  introspect.rs  jwks.rs  kubernetes.rs  lib.rs  subject.rs
examples/multi-tenant/: CHANGELOG.md  Cargo.toml
examples/multi-tenant/src/: main.rs
examples/single-tenant/: CHANGELOG.md  Cargo.toml
examples/single-tenant/src/: main.rs
