[workspace]
members = ["crates/limes", "examples/multi-tenant", "examples/single-tenant"]
resolver = "2"

[workspace.dependencies]
getrandom = "0.3.4"

[workspace.package]
edition = "2024"
homepage = "https://github.com/vakamo-labs/limes-rs"
repository = "https://github.com/vakamo-labs/limes-rs"
rust-version = "1.88.0"
license = "Apache-2.0"
