[package]
name = "limes"
resolver = "2"
version = "0.2.2"
readme = "README.md"
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
description = """
Limes is a multi-tenant capable Authentication middleware for OAuth2.0 and Open ID Connect with support for axum.
"""

[features]
all = ["kubernetes", "rustls-tls", "jwks", "axum"]
default = ["rustls-tls", "jwks", "aws-lc-rs"]
kubernetes = ["kube", "k8s-openapi"]
rustls-tls = [
    "kube?/rustls-tls",
    "jwks_client_rs?/rustls-tls",
    "reqwest/rustls-tls",
    "reqwest/rustls-tls-native-roots",
]
aws-lc-rs = ["kube?/aws-lc-rs"]
ring = ["kube?/ring"]
jwks = ["jwks_client_rs"]
axum = ["dep:axum", "axum-extra"]

[dependencies]
axum = { version = "0.8", optional = true }
axum-extra = { version = "0.10", optional = true, features = ["typed-header"] }
jsonwebtoken = { version = "9.3" }
jwks_client_rs = { version = "0.5.2", optional = true, default-features = false }
k8s-openapi = { version = "0.26", features = ["v1_32"], optional = true }
kube = { version = "0.99", default-features = false, features = [
    "client",
], optional = true }
once_cell = "1.20"
reqwest = { version = "0.12", default-features = false, features = ["json"] }
serde = { version = "1.0" }
serde_json = { version = "1.0", features = ["preserve_order"] }
thiserror = { version = "2.0" }
tracing = { version = "^0.1", features = ["attributes"] }
trait-variant = "0.1.2"
typed-builder = "0.21"
url = { version = "2.5", features = ["serde"] }

[dev-dependencies]
axum = { version = "0.8" }
pretty_assertions = "1.4"
tokio = { version = "1.43", features = ["rt-multi-thread"] }
tracing-test = "0.2.5"

[package.metadata.docs.rs]
# document all features
all-features = true
# enable unstable features in the documentation
rustdoc-args = ["--cfg", "docsrs"]
