[package]
name = "limes"
resolver = "2"
version = "0.4.0"
readme = "README.md"
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
description = """
Limes is a multi-tenant capable Authentication middleware for OAuth2.0 and Open ID Connect with support for axum.
"""

[package.metadata.docs.rs]
# document all features
all-features = true
# enable unstable features in the documentation
rustdoc-args = ["--cfg", "docsrs"]

[features]
all = ["kubernetes", "rustls-tls", "jwks", "axum", "valuable"]
default = ["rustls-tls", "jwks", "aws-lc-rs"]
kubernetes = ["kube", "k8s-openapi"]
rustls-tls = [
    "kube?/rustls-tls",
    "jwks_client_rs?/rustls",
    "reqwest/rustls",
    "reqwest/rustls-native-certs",
]
aws-lc-rs = ["kube?/aws-lc-rs"]
ring = ["kube?/ring"]
jwks = ["jwks_client_rs"]
axum = ["dep:axum", "axum-extra"]
valuable = ["dep:valuable"]

[dependencies]
axum = { version = "0.8", optional = true }
axum-extra = { version = "0.12", optional = true, features = ["typed-header"] }
jsonwebtoken = { version = "10.4", features = ["aws_lc_rs"] }
jwks_client_rs = { version = "0.6", optional = true, default-features = false }
# No version feature here: per k8s-openapi's guidance a library must let the final
# binary crate choose the Kubernetes version. The version is selected in dev-dependencies
# (for our own tests) and by consumers (see the `kubernetes` feature docs).
k8s-openapi = { version = "0.28", optional = true }
kube = { version = "4.0", default-features = false, features = [
    "client",
], optional = true }
reqwest = { version = "0.13", default-features = false, features = ["json"] }
serde = { version = "1.0" }
serde_json = { version = "1.0", features = ["preserve_order"] }
thiserror = { version = "2.0" }
tracing = { version = "^0.1", features = ["attributes"] }
trait-variant = "0.1.2"
typed-builder = "0.23"
url = { version = "2.5", features = ["serde"] }
valuable = { version = "0.1.1", optional = true, features = ["derive"] }

[dev-dependencies]
axum = { version = "0.8" }
# Select a Kubernetes version for the crate's own tests only (not forced on consumers).
k8s-openapi = { version = "0.28", features = ["v1_32"] }
pretty_assertions = "1.4"
tokio = { version = "1.43", features = ["rt-multi-thread"] }
tracing-test = "0.2.5"
